dataset1235/2025-2/610742602/users/3642541582/executions/2563853024_1319609354.log
== SUBMISSION (2025-09-02 20:20:51)
-- CODE: 
n1 = float(input("digite um valor: "))
n2 = float(input("digite um valor: "))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
digite um valor: digite um valor: 7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
digite um valor: digite um valor: 14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
digite um valor: digite um valor: 14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
digite um valor: digite um valor: 11.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
digite um valor: digite um valor: 12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
digite um valor: digite um valor: 7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:20:44)
-- CODE: 
n1 = float(input("digite um valor: "))
n2 = float(input("digite um valor: ")

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:20:50)
-- CODE: 
n1 = float(input("digite um valor: "))
n2 = float(input("digite um valor: "))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
digite um valor: digite um valor: 7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
digite um valor: digite um valor: 14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
digite um valor: digite um valor: 14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
digite um valor: digite um valor: 11.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
digite um valor: digite um valor: 12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
digite um valor: digite um valor: 7.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:21:03)
-- CODE: 
n1 = float(input("digite um valor: "))
n2 = float(input("digite um valor: "))

media = (n1 + n2) / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
digite um valor: digite um valor: 5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
digite um valor: digite um valor: 9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
digite um valor: digite um valor: 9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
digite um valor: digite um valor: 7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
digite um valor: digite um valor: 8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
digite um valor: digite um valor: 5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:20:45)
-- CODE: 
n1 = float(input("digite um valor: "))
n2 = float(input("digite um valor: ")

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite um valor: ")
              ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:21:03)
-- CODE: 
n1 = float(input("digite um valor: "))
n2 = float(input("digite um valor: "))

media = (n1 + n2) / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
digite um valor: digite um valor: 5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
digite um valor: digite um valor: 9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
digite um valor: digite um valor: 9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
digite um valor: digite um valor: 7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
digite um valor: digite um valor: 8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
digite um valor: digite um valor: 5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
